--- a/puzzle1sorting_styling.css
+++ b/puzzle1sorting_styling.css
@@ -289,3 +289,15 @@ body {
 .hidden {
     display: none !important;
 }
+
+#back-button {
+    padding: 10px 15px;
+    font-size: 0.8rem;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-weight: 500;
+    text-align: center;
+    margin: 5px 7.5px;
+}
