--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,10 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    border: 3px dotted;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 25px;
 }
 
 .puzzle-entry button {
